fix: Fabric 1.21.1 Cobblemon support, Java 21 detection, and GL4ES compatibility
Detailed changes:
- Tools.java:
  * Added automatic Mixin LVT sanitization before JVM start for enchdesc (MixinItemEnchants), owo (Copenhagen/malding), and sodium (LevelRendererMixin) to prevent JVM crashes on Android JDK 21.
  * Added sanitizeIncompatibleGLESMods to automatically neutralize desktop-only Sodium/Iris chunk shaders on GL4ES (fixing transparent/invisible world blocks and terrain).
  * Added applySodiumCompatPatch and applyLithiumCompatPatch to auto-configure mixin properties for mobile stability.
  * Added Android 15/16 and Adreno 750 renderer compatibility policy (enforcing opengles3 on GL4ES).
- OnyxMainActivity.kt:
  * Fixed required Java version calculation for Minecraft 1.20.5+ / 1.21+ (detecting Java 21).
  * Fixed launcher UI bug showing 'Java 8 required / not installed' when Internal-21 is installed.
- JREUtils.java:
  * Enabled Turnip Vulkan driver mapping for Adreno GPUs and configured GL 3.3 environment variables.
- Build & Configuration:
  * Updated build.gradle for Android SDK 35 and cleaned .gitignore for JRE components and keystores.